--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </style>
 </head>
 <body>
-    <img src="https://i.imgur.com/ZqoxH8r.png" alt="Your Image">
+    <a href="https://kainsummerfield1.github.io/K-3">
+        <img src="https://i.imgur.com/ZqoxH8r.png" alt="Your Image">
+    </a>
 </body>
 </html>
