--- a/index.html
+++ b/index.html
@@ -17,11 +17,30 @@
             height: 100%;
             object-fit: cover;
         }
+        
+        .banner {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <a href="https://kainsummerfield1.github.io/K-3">
+    <div class="banner" id="banner">Press the image</div>
+    <a href="https://example.com">
         <img src="https://i.imgur.com/ZqoxH8r.png" alt="Your Image">
     </a>
+
+    <script>
+        setTimeout(function() {
+            document.getElementById('banner').style.display = 'block';
+        }, 10000);
+    </script>
 </body>
 </html>
