--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="banner" id="banner">Press the image</div>
-    <a href="https://example.com">
+    <a href="https://kainsummerfield.github.io/sg1/">
         <img src="https://i.imgur.com/ZqoxH8r.png" alt="Your Image">
     </a>
 
