--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="banner" id="banner">Press the image</div>
     <a href="https://kainsummerfield.github.io/sg1/">
-        <img src="https://i.imgur.com/ZqoxH8r.png" alt="Your Image">
+        <img src="https://raw.githubusercontent.com/kaisummer/kainsg/main/BarryWood/IMG_3960.jpeg" alt="Your Image">
     </a>
 
     <script>
